data/parse-errors/circular-references/specs/specification.spec
Circular References
=====================
Created by sswaroop on 12/15/2017

This is an executable specification file which follows markdown syntax.
Every heading in this file denotes a scenario. Every bulleted point denotes a step.
     
Scenario Heading
----------------
* Concept1